final-devops-project/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo
  labels: &id001
    app: devops-demo
  namespace: devops-final
spec:
  selector: *id001
  ports:
  - name: http
    port: 80
    targetPort: http
